--- a/css/laurentina.css
+++ b/css/laurentina.css
@@ -10,15 +10,18 @@
    --font-body:  'comic-san' !important;
 }
 /* UI */
-
 .loot-backdrop.background-static {
    background-image: none;
 }
-
 .loot-backdrop .lol-uikit-video-content{ 
      display: none;
  }
-
+.loot-loading-screen {
+   display: none;
+}
+.loot-backdrop {
+   display: none;
+}
 .lol-social-sidebar {
     width: 100%;
     height: 100%;
@@ -28,31 +31,26 @@
     font-size: 12px;
     cursor: default;
     -webkit-user-drag: none;
-    -webkit-user-select: none;
     background-color: transparent !important;
     background: transparent;
 }
-
 .collections-application {
     background-image: url('//assets/bg.jpg') !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 .parties-view .parties-background {
-   opacity: 0;
+   display: none;
 }
-
 #rcp-fe-viewport-root {
    background-image: url('//assets/bg.jpg') !important;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
 }
-
 .rcp-fe-viewport-sidebar {
-    background: rgba(0, 0, 0, 0) !important;
+    background: transparent !important;
 }
 #rcp-fe-viewport-root > .rcp-fe-viewport-full-screen {
     background-color: transparent;
@@ -62,20 +60,15 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
-    -webkit-user-select: none;
     box-shadow: inset 0px 0px 40px rgba(255, 255, 255, 0.2);
 }
-
-/*THL icon*/
-.currency-be-icon-container {
-   filter: brightness(0) invert(1)!important;
+.rcp-fe-lol-profiles-main > .component-factory-application > .ember-view > .style-profile-backdrop-component.ember-view > .style-profile-backdrop-container > .style-profile-masked-image {
+   display: none;
 }
-
-/* RP icon */
-.currency-rp {
-   filter: brightness(0) invert(1)!important;
+#shadow-root > .regalia-profile-root-element > .regalia-profile-banner-backdrop > .regalia-banner-loaded {
+   opacity: 0.5;
+   filter: grayscale(100%) brightness(1);
 }
-
 /* Notification icon*/
 .main-navigation-menu-item {
    min-width: 40px;
@@ -85,26 +78,26 @@
    --disabled-color: rgba(240,230,210,0.5);
    filter: brightness(0) invert(1)!important;
 }
-
+.navbar-blur {
+   position: absolute;
+   top: 0;
+   height: 79px;
+   width: 100%;
+   background: transparent;
+}
 .style-profile-sub-nav {
    filter: brightness(0) invert(1)!important;
 }
 .style-profile-skin-picker-button {
    filter: grayscale(50%) brightness(1);
 }
-
 .ticker-button {
    filter: grayscale(50%) brightness(1);
 }
-
 .loot-currency-container {
    filter: grayscale(50%) brightness(2);
 }
-
-.rcp-fe-lol-profiles-main > .component-factory-application > .ember-view > .style-profile-backdrop-component.ember-view > .style-profile-backdrop-container > .style-profile-masked-image {
-   display: none;
-}
-
+/*Background blur*/
 .loot-contents,
 .parties-content {
    background-color: transparent !important;
@@ -128,7 +121,6 @@
   padding: 1rem;
   border-radius: 10px;
 }
-
 .lol-uikit-flat-input input[type="search"] {
     line-height: 15px;
     padding-left: 24px;
@@ -136,12 +128,103 @@
       url("/fe/lol-static-assets/images/uikit/magnifying-glass-icon.png")
       rgba(0, 0, 0, 0);
 }
-
+/*THL icon*/
+.currency-be-icon-container {
+   filter: brightness(0) invert(1)!important;
+}
+/* RP icon */
+.currency-rp {
+   filter: brightness(0) invert(1)!important;
+}
 /* Hide VNG Age Ratings */
 .vng-age-rating {
    display: none !important;
 }
-/* Patch Notes */
-.article-scrollable-body {
-   padding: 1rem;
+/*Play button */
+.league-client-logo {
+   display: none !important;
+}
+.basic-button {
+   position: absolute;
+   top: 10px;
+   width: 122px;
+   height: 38px;
+   padding: 7px 0;
+   cursor: default;
+   pointer-events: none;
+}
+.play-button-container {
+width: 100%;
+height: 100%;
+display: inline-block;
+padding: 10px;
+border: 1px solid #4f4f4f;
+border-radius: 4px;
+transition: all 0.2s ease-in;
+position: relative;
+overflow: hidden;
+font-size: 19px;
+color: black;
+z-index: 1;
+}
+.play-button-container:before {
+content: "";
+position: absolute;
+left: 50%;
+transform: translateX(-50%) scaleY(1) scaleX(1.25);
+top: 100%;
+width: 140%;
+height: 180%;
+background-color: rgba(0, 0, 0, 0.05);
+border-radius: 50%;
+display: block;
+transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+z-index: -1;
+}
+.play-button-container:after {
+content: "";
+position: absolute;
+left: 55%;
+transform: translateX(-50%) scaleY(1) scaleX(1.45);
+top: 180%;
+width: 160%;
+height: 190%;
+background-color: #39bda7;
+border-radius: 50%;
+display: block;
+transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+z-index: -1;
+}
+.play-button-container:hover {
+color: #ffffff;
+border: 1px solid #39bda7;
+}
+.play-button-container:hover:before {
+top: -35%;
+background-color: #39bda7;
+transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+.play-button-container:hover:after {
+top: -45%;
+background-color: #39bda7;
+transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+.play-button-container:active {
+box-shadow: 0 0 0.6em .25em var(--glow-color),
+       0 0 2.5em 2em var(--glow-spread-color),
+       inset 0 0 .5em .25em var(--glow-color);
+}
+.play-button-content {
+  width: unset !important;
+  left: unset !important;
+}
+.play-button-text {
+  width: unset !important;
+}
+.play-button-container:hover {
+  background-color: rgba(59, 59, 59, 0.719);
+}
+.play-button-container,
+.play-button-frame {
+  background-image: none !important;
 }
